[gd_scene load_steps=21 format=3 uid="uid://rat8yrl7q1s2"]

[ext_resource type="Script" path="res://game.gd" id="1_5jk3b"]
[ext_resource type="Script" path="res://movement.gd" id="1_b5d85"]
[ext_resource type="PackedScene" uid="uid://ccqhrx5q44mhj" path="res://porsche.tscn" id="1_m4jpn"]
[ext_resource type="Script" path="res://selection.gd" id="3_byygg"]
[ext_resource type="Shader" path="res://pixelate.gdshader" id="4_3subs"]
[ext_resource type="Shader" path="res://3d_postprocessing.gdshader" id="4_7y6y4"]
[ext_resource type="PackedScene" uid="uid://bgkw23i7llda8" path="res://controls.tscn" id="4_tv25l"]
[ext_resource type="Texture2D" uid="uid://b33vc1hchqq6a" path="res://HDRIs/lonely_road_afternoon_puresky_4k.exr" id="5_7i7co"]
[ext_resource type="PackedScene" uid="uid://dn0j5qggwpok2" path="res://paint.tscn" id="6_4d8yq"]
[ext_resource type="PackedScene" uid="uid://bmc2e02nt5p4l" path="res://change_scene.tscn" id="9_26csb"]
[ext_resource type="PackedScene" uid="uid://cyeaund6hbiyc" path="res://navigation.tscn" id="10_vdhvu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_48v65"]
size = Vector3(0.01, 25, 25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oxyru"]
albedo_color = Color(0, 0, 0, 1)
metallic_specular = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_y1idb"]
material = SubResource("StandardMaterial3D_oxyru")
size = Vector2(20.48, 25)
orientation = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_py3oc"]
render_priority = -128
shader = ExtResource("4_7y6y4")
shader_parameter/color_passthrough = false
shader_parameter/depth_check = true
shader_parameter/normal_check = true
shader_parameter/tint_color = Color(1, 1, 1, 1)
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/depth_line_strength = 1.0
shader_parameter/normal_line_strength = 1.0
shader_parameter/noise_offset_multiplier = 0.5
shader_parameter/red_weight = 0.5
shader_parameter/green_weight = 0.5
shader_parameter/blue_weight = 0.5
shader_parameter/black_threshold = 0.001
shader_parameter/white_threshold = 2.0
shader_parameter/grain_amount = 0.2
shader_parameter/line_size = 1.0
shader_parameter/lines_texture_scale = 5.0
shader_parameter/grain_texture_scale = 10.0

[sub_resource type="QuadMesh" id="QuadMesh_tjtdg"]
material = SubResource("ShaderMaterial_py3oc")
flip_faces = true
size = Vector2(25, 25)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_3tuul"]
panorama = ExtResource("5_7i7co")

[sub_resource type="Sky" id="Sky_u60yg"]
sky_material = SubResource("PanoramaSkyMaterial_3tuul")

[sub_resource type="Environment" id="Environment_rscl1"]
background_mode = 1
sky = SubResource("Sky_u60yg")
glow_intensity = 1.34
adjustment_brightness = 0.94
adjustment_contrast = 1.05

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hs2jx"]
shader = ExtResource("4_3subs")

[node name="Game" type="Node3D"]
script = ExtResource("1_5jk3b")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(4.37114e-08, 1, -3.82137e-15, 1, -4.37114e-08, -8.74228e-08, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, -2.2215e-28, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_48v65")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, -2.2215e-28, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("QuadMesh_y1idb")

[node name="Porsche" parent="." instance=ExtResource("1_m4jpn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.051962, 0)

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(0.848048, 0, 0.529919, 0, 1, 0, -0.529919, 0, 0.848048, 0.125, 0.583274, 0)
script = ExtResource("1_b5d85")

[node name="InnerCameraPivot" type="Node3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.956305, 0.292372, 0, -0.292372, 0.956305, 0, 0, 0)

[node name="PostProcessingLayer" type="MeshInstance3D" parent="CameraPivot/InnerCameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.091, -0.538, 4.831)
visible = false
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_tjtdg")
skeleton = NodePath("../../../Post Processing")

[node name="Camera3D" type="Camera3D" parent="CameraPivot/InnerCameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6)
environment = SubResource("Environment_rscl1")
current = true
fov = 40.0
size = 4.025
script = ExtResource("3_byygg")

[node name="Light" type="SpotLight3D" parent="."]
transform = Transform3D(0.365998, -0.5, -0.784886, -0.906308, -3.9616e-08, -0.422618, 0.211309, 0.866025, -0.453154, -3.049, 0, -3.013)
light_energy = 10.0
shadow_enabled = true
spot_attenuation = 0.5

[node name="Light6" type="SpotLight3D" parent="."]
transform = Transform3D(0.408218, 0.258819, -0.875426, -0.906308, -3.9616e-08, -0.422618, -0.109382, 0.965926, 0.23457, -3.022, 0, 2.032)
light_energy = 10.0
shadow_enabled = true
spot_attenuation = 0.5

[node name="Light5" type="SpotLight3D" parent="."]
transform = Transform3D(-0.686519, 0.301291, 0.661752, -0.673518, -0.606438, -0.422618, 0.27398, -0.735837, 0.619256, 2.981, 0, 2.019)
light_energy = 10.0
shadow_enabled = true
spot_attenuation = 0.5

[node name="Light4" type="SpotLight3D" parent="."]
transform = Transform3D(-0.408218, -0.258819, 0.875426, -0.906308, -2.61109e-08, -0.422618, 0.109382, -0.965926, -0.23457, 2.992, 0, -2.963)
light_energy = 10.0
shadow_enabled = true
spot_attenuation = 0.5

[node name="LightFront" type="SpotLight3D" parent="."]
transform = Transform3D(-8.9407e-08, 1, -1.12533e-08, -0.939693, -8.01662e-08, 0.34202, 0.34202, 4.11536e-08, 0.939693, -0.0079999, 1.72555, 3.03451)
light_energy = 3.0
shadow_enabled = true
spot_range = 6.0
spot_angle = 50.0

[node name="LightBack" type="SpotLight3D" parent="."]
transform = Transform3D(1.26353e-07, -1, -6.79786e-08, -0.939693, -1.41984e-07, 0.34202, -0.34202, 2.06636e-08, -0.939693, -0.0079999, 2, -4.963)
light_energy = 10.0
shadow_enabled = true
spot_range = 7.0
spot_angle = 30.0
spot_angle_attenuation = 2.0

[node name="Post Processing" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Post Processing"]
material = SubResource("ShaderMaterial_hs2jx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasModulate" type="CanvasModulate" parent="Post Processing"]

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Navigation" parent="UI/MarginContainer" instance=ExtResource("10_vdhvu")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Paint" parent="UI/MarginContainer" instance=ExtResource("6_4d8yq")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="ChangeScene" parent="UI/MarginContainer" instance=ExtResource("9_26csb")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1

[node name="Controls" parent="UI/MarginContainer" instance=ExtResource("4_tv25l")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[connection signal="active_tab_changed" from="UI/MarginContainer/Navigation" to="." method="_on_navigation_active_tab_changed"]
[connection signal="colour_changed" from="UI/MarginContainer/Paint" to="." method="_on_paint_colour_changed"]
[connection signal="material_changed" from="UI/MarginContainer/Paint" to="." method="_on_paint_colour_changed"]
[connection signal="button_pressed" from="UI/MarginContainer/ChangeScene" to="." method="_on_change_scene_button_pressed"]
